[package]
name = "relaynaut-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
relaynaut-common = { path = "../relaynaut-common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
hdrhistogram = "7"
